# stable-diffusion-image-server

./: .gitignore  Dockerfile  Makefile  README.md  dev.ipynb  package.json  pyproject.toml  requirements.txt  setup.py  tailwind.config.js
.devcontainer/: Dockerfile  Dockerfile-alpine  devcontainer-template.json  devcontainer.json  init-host.sh  install-node.sh  post-create.sh  post-start.sh  redis.conf
.github/workflows/: publish.yml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: favicon.pxd
frontend/templates/: index.html.j2
scripts/: sync_frontend_symlinks.sh  sync_symlinks.py
sdis/: app.py  cli_args.py  db.py  model.py  server.py  utils.py
sdis/model/: album.py  async_overlay.py  image.py  import.py  service.py
sdis/model/albums/: __init__.py  album.py  album_import.py  album_keys.py  album_service.py
sdis/model/images/: __init__.py  image.py  image_import.py  image_keys.py  image_service.py
sdis/model/queries/: create_schema.sql
sdis/templates/: index.html
sdis/templates/static/css/: style.css
sdis/templates/static/js/: index.js
tests/model/: test_album.py  test_service.py
