[tool.poetry]
name = "sdis"
version = "1.1.0"
description = "Stable Diffusion Image Server - Simple HTTP Image Server for Stable Diffusion output"
authors = ["Simon Free <sipefree@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sdis"}]
include = [
    "frontend/dist/**/*",
    "frontend/templates/**/*"
]
exclude = [
    "frontend/src/**/*"
]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^10.0.0"
jinja2 = "^3.1.2"
tqdm = "^4.65.0"
imagesize = "^1.4.1"
piexif = "^1.1.3"
asyncinotify = "^4.0.2"
attrs = "^23.1.0"
cattrs = "^23.1.2"
sanic = "^23.6.0"
sanic-ext = "^23.6.0"
xxhash = "^3.3.0"
redis = "^5.0.0"
ipython = "^8.14.0"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["sdis", "scripts"]
exclude = [".venv/**"]
useLibraryCodeForTypes = true
strict = ["sdis"]
typeCheckingMode = "strict"
reportMissingImports = "information"
reportMissingTypeStubs = "information"
reportUnknownMemberType = "information"
reportUnusedImport = "warning"